RESOLVED FIXED315080
[Win] OSAllocator::tryProtect fails when memory spans multiple reserved regions
https://bugs.webkit.org/show_bug.cgi?id=315080
Summary [Win] OSAllocator::tryProtect fails when memory spans multiple reserved regions
Sosuke Suzuki
Reported 2026-05-19 00:21:57 PDT
...
Attachments
Sosuke Suzuki
Comment 1 2026-05-19 00:23:58 PDT
EWS
Comment 2 2026-05-19 18:16:37 PDT
Committed 313532@main (912cfd18d9b4): <https://commits.webkit.org/313532@main> Reviewed commits have been landed. Closing PR #65167 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-05-19 18:17:13 PDT
Note You need to log in before you can comment on or make changes to this bug.