[Win] `OSAllocator::tryProtect` fails when memory spans multiple reserved regions https://bugs.webkit.org/show_bug.cgi?id=315080

Reviewed by Yusuke Suzuki.

OSAllocator::tryProtect on Windows uses VirtualAlloc(MEM_COMMIT) to change
page protection. VirtualAlloc(MEM_COMMIT) cannot span multiple regions
created by separate MEM_RESERVE calls and fails with ERROR_INVALID_ADDRESS
when given such a range. libpas can return a contiguous address range that
is backed by multiple reservations, and JSC calls OSAllocator::protect on
libpas-allocated memory when growing Wasm shared memory and resizable
ArrayBuffers, which then crashes in RELEASE_ASSERT_NOT_REACHED.

Walk the range with VirtualQuery and commit one region at a time, mirroring
the vmZeroAndPurge fix in 306171@main.

* Source/WTF/wtf/win/OSAllocatorWin.cpp:
(WTF::OSAllocator::tryProtect):

Canonical link: https://commits.webkit.org/313532@main